# PythonSearch

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  NOTICE  NOTICE.md  PythonSearch.code-workspace  README.md  add_bom_to_file.sh  bundle.py  cleanup.py  cli.py  container.py  dump.rdb  end2endtest.py  fix_flake8.py  karabiner_base.json  log_command.sh  mypy.ini  ps_container.py  pyinstaller_pysearch.spec  pyproject.toml  python_search_cli.spec  python_search_tray.py  read_feature_store.py  register_new_app.spec  requirements-dev.txt  requirements.in  requirements.txt  search_run_config.py  setup.py  start_infra.py  start_infra.sh  start_streamlit_app.py  (+4 more)
.github/: main.yml
.github/workflows/: pages.yml  publish_pypi.yml  static.yml  test.yml
container/: setup.sh
default_entries/: python_search.py
docs/: adaptive_window_sizing.md  config.ini.part1  customizing_python_search.md  data_collection.md  entities.md  entries_options.md  frequently-asked-questions-faq.md  installation.md  intergrate_chatgpt.md  linux.md  llm.md  next_item_predictor.md  philosopy.md  search_ui.md  search_ui_shortcuts.md  shortcuts.md  tests.md  web_ui.md  webserver.md
docs/contributing/: recommendations.md
docs/mac/: icanhasshortcut_example.md  start_python_search_in_a_click.md
examples/: entries_main.py  minimal.py  simple_example.py
feature_store/: entries.py  example.py  feature_store.yaml
feature_store/data/: driver_stats.parquet
html/python_search/: acronyms.html  cli.html  config.html  context.html  core_entities.html  entries_group.html  entry_runner.html  environment.html  exceptions.html  features.html  index.html  shortcuts.html  web_api.html
notebooks/: InspectExecutedKeys.ipynb  dataset.ipynb  dataset_stats.py.ipynb  inspect_events.ipynb  label.ipynb  predict_ranking.ipynb  train_model.ipynb
notebooks/.ipynb_checkpoints/: dataset-checkpoint.ipynb  inspect_events-checkpoint.ipynb
python_search/: PythonSearch.code-workspace  __init__.py  acronyms.py  chat_gpt.py  cli.py  config.py  container.py  context.py  core_entities.py  daemon.py  data_collector.py  data_exporter.py  entries_group.py  entry_change.py  entry_generator.py  entry_runner.py  entry_type.py  environment.py  exceptions.py  feature_toggle.py  features.py  logger.py  python_search_cli.py  python_search_cli.spec  share.py  share_entry.py  system_paths.py  theme.py  type_detector.py  web_api.py
python_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_search/apps/: README.md  apps.py  browser.py  capture_input.py  clipboard.py  collect_input.py  collect_input_textual.py  google_it.py  notification_ui.py  prompt_editor.py  terminal.py  window_manager.py
python_search/configuration/: configuration.py  data_config.py  loader.py
python_search/core_entities/: core_entities.py
python_search/data_ui/: app_functions.py  entries_page.py  homepage.py  main.py  results_page.py  training_page.py
python_search/datasets/: searchesperformed.py
python_search/declarative_ui/: __init__.py  declarative_ui.py
python_search/entry_capture/: ask_question_ui.py  data_capture_gui.py  data_capture_ui.py  edit_content.py  entries_editor.py  entry_inserter.py  entry_inserter_gui.py  filesystem_entry_inserter.py  gui.py  register_new.py  utils.py
python_search/entry_description_generator/: description_geneartor.py  pipeline.py
python_search/entry_type/: classifier_inference.py  entity.py  entry_type_pipeline.py  type_detector.py
python_search/error/: error_pane.py  exception.py
python_search/events/: consumer.py  events.py  events_etl.py  latest_used_entries.py  producer.py  search_run_performed.py
python_search/host_system/: display_detection.py  system_paths.py  test_display_detection.py  window_hide.py  windows_focus.py
python_search/infrastructure/: arize.py  infrastructure.py  performance.py  redis.py  report.py
python_search/init/: entries_main.py  install_dependencies.py  project.py
python_search/init_project/: __init__.py  entries_main.py
python_search/interpreter/: base.py  cmd.py  file.py  group.py  interpreter.py  interpreter_matcher.py  python.py  snippet.py  url.py  urlinterpreter.py
python_search/llm_next_item_predictor/: distilbert.py  evaluation.py  gpt2.py  llm_cli.py  llm_dataset.py  llmdataset.py  next_item_llm_dataset.py  offline_evaluation.py  t5.py
python_search/next_item_predictor/: evaluator.py  mlflow_logger.py  model_interface.py  next_item_model_v1.py  next_item_model_v2.py  next_item_pipeline.py  offline_evaluation.py  train_keras.py  train_xgboost.py  training_dataset.py
python_search/observability/: logger.py
python_search/official_entries/: entries.py
python_search/plugins/: reminders.py
python_search/privacy/: detector.py  privacy_detector.py
register_new_rust/: Cargo.toml  main.rs
search_run/: README.md  acronyms.py  base_configuration.py  cli.py  config.py  configuration.py  configuration_generator.py  context.py  core_entities.py  data_paths.py  dmenu_run.py  entities.py  entries_group.py  entry_runner.py  environment.py  events.py  exceptions.py  export_configuration.py  features.py  logger.py  ranking.py  register_new.py  run_key.py  runner.py  search.py  shortcuts.py  terminal.py  web_api.py
search_run.egg-info/: PKG-INFO  SOURCES.txt
search_ui_rust/: Cargo.toml
systemd-services/: README.md  python-search-executed-redis-consumer.service
tests/: test_acronyms.py  test_browser.py  test_cli_api.py  test_clipboard.py  test_copy_entry_content.py  test_datadog.py  test_dmenu.py  test_entry_editor.py  test_entrypoints.py  test_events.py  test_examples.py  test_focus.py  test_kafka.py  test_logging.py  test_match_entry.py  test_matching.py  test_nlp.py  test_program_entrypoints.py  test_redis.py  test_register_new.py  test_run_before_cmd.py  test_search_actions.py  test_search_logic.py  test_serialize.py  test_share_entry.py  test_terminal_ui_dimensions.py  utils.py
website/: README.md  config.toml  index.html  pelicanconf.py  publishconf.py
(+340 files in other folders)
