[tool.poetry]
name = "python-search"
version = "0.10.2"

description = "Build your knowledge database in python and retrieve it efficiently"
authors = ["Jean Carlo Machado <machado.c.jean@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fire = "^0.4.0"
pydantic = "^1.9.1"
PyYAML = "^6.0"
PySimpleGUI = "^4.60.1"
colorama = "^0.4.5"
certifi = "^2022.6.15"
dill = "^0.3.5.1"
fastapi = { version = "^0.79.0", optional = true }
kafka-python = { version = "^2.0.2", optional = true }
scipy = { version = ">=1.8.1", optional = true }
xgboost = { version = "^1.6.1", optional = true }
matplotlib = { version = "^3.5.2", optional = true }
pandas = { version = "^1.4.3", optional = true }
redis = { version = "^4.3.4", optional = true }
uvicorn = { version = "^0.18.2", optional = true }
numpy = { version = ">=1.23.4", optional = true }
msgpack-numpy = { version = ">=0.4.8", optional = true }
pyspark = { version = ">=3.0", optional = true }
mlflow = ">=1.29.0,<1.30.0"
pdoc3 = {version = "^0.10.0", optional = true}
keras = {version = ">=2.10", optional = true}
# tensorflow cannot be installed in mac m1 chips
tensorflow = {version = ">=2.10.0", optional = true, platform = 'linux'}
arize = { version = "^5.2.0", optional = true }
jupyterlab = { version = "^3.5.0", optional = true }
streamlit = {version = "^1.14.1", optional = true, python = "3.10"}
pyroscope-io = "^0.8.0"
tensorflow-macos = {version = "^2.11.0", optional = true, platform = "mac"}


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python_search = 'python_search.cli:main'
next_item_pipeline = 'python_search.next_item_predictor.next_item_pipeline:main'
next_item = 'python_search.next_item_predictor.next_item_pipeline:main'
collect_input = 'python_search.apps.collect_input:main'
clipboard = 'python_search.apps.clipboard:main'
notify_send = 'python_search.apps.notification_ui:main'
python_search_infra = 'python_search.infrastructure.infrastructure:main'
browser = 'python_search.apps.browser:main'
python_search_webapi = 'python_search.web_api:main'
run_entry = 'python_search.entry_runner:main'
run_key = 'python_search.entry_runner:main'
reminders = 'python_search.plugins.reminders:main'
feature_toggle = 'python_search.feature_toggle:FeatureToggle.main'
generic_data_collector = 'python_search.data_collector:GenericDataCollector.initialize'
ps_container = 'python_search.container:start'
ps_webapi = 'python_search.sdk.web_api_sdk:main'
aps_webapi = 'python_search.sdk.web_api_sdk:main'
wrap_log_command = {reference = "wrap_log_command.sh", type = "file", extras = []}
events_etl = 'python_search.events.events_etl:main'
chat_gpt = 'python_search.chat_gpt:main'
entry_builder = 'python_search.entry_capture.entry_inserter_gui:main'
entry_embeddings = 'python_search.next_item_predictor.features.entry_embeddings.entry_embeddings:main'
entries_editor = 'python_search.entry_capture.entries_editor:main'

[tool.poetry.extras]
server = [
    "pyspark",
    "mlflow",
    "keras",
    "tensorflow",
    "uvicorn",
    "fastapi",
    "kafka-python",
    "redis",
    "pandas",
    "numpy",
    "scipy",
    "xgboost",
    "matplotlib",
    "msgpack-numpy",
    "arize",
    "jupyterlab",
]
