[package]
name = "register_new_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "*"
druid-widget-nursery = "*"
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "register_new_rust"
path = "main.rs"

